# lunabot_ros

./: .clang-format  .clang-tidy  .gitattributes  .gitmodules  Dockerfile  README.md  foxglove_layout.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  ros2-humble-ci-pipeline.yml
lunabot_bringup/: CMakeLists.txt  README.md  package.xml
lunabot_bringup/config/: canable-setup.service  cyclonedds.xml  lunabot-launch-manager.service  network-wait.conf
lunabot_bringup/launch/: actions_launch.py  gui_launch.py  hardware_launch.py  launch_manager.launch.py  localization_launch.py  mapping_launch.py  nav2_stack_launch.py  pointlio_launch.py  real_launch.py  robot_launch.py  sim_launch.py  simulation_launch.py  vis_launch.py  visualization_launch.py  viz_launch.py
lunabot_bringup/scripts/: launch_manager_node.py
lunabot_config/: CMakeLists.txt  README.md  package.xml
lunabot_config/behavior_trees/: nav_through_poses_w_replanning_and_recovery.xml  nav_to_pose_with_consistent_replanning_and_if_path_becomes_invalid.xml
lunabot_config/params/: ekf_params.yaml  gazebo_bulldozer_bot_params.yaml  gazebo_trencher_bot_params.yaml  gui_params.yaml  nav2_params.yaml  nav2_rectangle_bot_params.yaml  nav2_square_bot_params.yaml  nav2_trencher_bot_params.yaml  rtabmap_params.yaml
lunabot_config/params/apriltag/: tag_params.yaml
lunabot_config/params/gazebo/: gazebo_bulldozer_bot_params.yaml  gazebo_v1_bot_params.yaml  gazebo_v2_bot_params.yaml  gazebo_v2_params.yaml  gz_bridge.yaml
lunabot_config/params/gui/: gui_params.yaml
lunabot_config/params/kiss_icp/: mid360.yaml
lunabot_config/params/laser_filters/: s2l_params.yaml
lunabot_config/params/mid360/: mid360.json
lunabot_config/params/nav2/: nav2_bulldozer_bot_params.yaml  nav2_real_bot_params.yaml  nav2_rectangle_bot_params.yaml  nav2_square_bot_params.yaml  nav2_test_bot_params.yaml  nav2_v1_bot_params.yaml
lunabot_config/params/point_lio/: mid360_real.yaml  mid360_sim.yaml
lunabot_config/params/robot_localization/: ekf_params.yaml  ukf_params.yaml
lunabot_config/params/rtabmap/: rtabmap_params.yaml
lunabot_config/rviz/: robot_view.rviz
lunabot_description/: CMakeLists.txt  README.md
lunabot_description/meshes/bulldozer_bot/: bulldozer_bot_blade.dae  bulldozer_bot_blade.stl  bulldozer_bot_blade_arm.dae  bulldozer_bot_blade_arm.stl
lunabot_description/meshes/trencher_bot/: trencher_bot_s2l_lidar.stl
lunabot_description/meshes/v1_bot/: v1_bot_d456_camera.stl
lunabot_description/meshes/v2/: v2_mid360_lidar.stl
lunabot_description/meshes/v2_bot/: v2_bot_bucket.dae  v2_bot_bucket.stl  v2_bot_d456_camera.stl  v2_bot_fisheye_camera.stl  v2_bot_fisheye_mount.dae  v2_bot_fisheye_mount.stl
lunabot_description/urdf/: bulldozer_bot.urdf.xacro  test_bot.urdf.xacro  trencher_bot.urdf.xacro  v1_bot.urdf.xacro  v2.urdf.xacro  v2_bot.urdf.xacro
lunabot_driver/: package.xml  setup.cfg  setup.py
lunabot_driver/lunabot_driver/: mecanum_driver.py
lunabot_driver/rosmaster/Rosmaster_Lib/: Rosmaster_Lib.py
lunabot_driver/rosmaster/Rosmaster_Lib.egg-info/: PKG-INFO
lunabot_gazebo/: CMakeLists.txt  package.xml
lunabot_gui/: CMakeLists.txt  README.md  package.xml  setup.py
lunabot_gui/launch/: gui_launch.py
lunabot_gui/src/: gui_styles.py  lunabot_gui.py  ros_interface.py  ui_widgets.py
lunabot_logger/: CMakeLists.txt  README.md  package.xml
lunabot_logger/include/lunabot_logger/: logger.hpp
lunabot_logger/lunabot_logger/: __init__.py
lunabot_msgs/: CMakeLists.txt  README.md  package.xml
lunabot_msgs/action/: Depositing.action  Dumping.action  Excavation.action  Homing.action  Localization.action
lunabot_msgs/msg/: ControlState.msg  MotorCommands.msg  PowerMonitor.msg
lunabot_msgs/srv/: LaunchSystem.srv  StopSystem.srv
lunabot_nav/: CMakeLists.txt  README.md  package.xml
lunabot_nav/src/: assisted_depositing_server.cpp  assisted_excavation_server.cpp  auto_depositing_server.cpp  auto_excavation_server.cpp  depositing_server.cpp  depositing_server_sim.cpp  dumping_server.cpp  dumping_server_sim.cpp  excavation_server.cpp  excavation_server_sim.cpp  homing_server.cpp  homing_server_sim.cpp  light_excavation_server.cpp  localization_server.cpp  navigation_client.cpp  straight_line_planner.cpp
lunabot_ros/: CMakeLists.txt  README.md  package.xml
lunabot_sim/: CMakeLists.txt  README.md  package.xml
lunabot_simulation/: CMakeLists.txt  package.xml
lunabot_simulation/models/rectangle_bot/: rectangle_bot_blade.dae  rectangle_bot_blade.stl
lunabot_simulation/models/square_bot/: square_bot_blade.stl  square_bot_body.stl
lunabot_simulation/src/teleop/: keyboard_teleop.py
lunabot_simulation/urdf/real/: trencher_bot.xacro
lunabot_simulation/urdf/robot/: rectangle_bot.xacro  square_bot.xacro  trencher_bot.xacro  yahboom.xacro
lunabot_simulation/urdf/simulation/: trencher_bot.xacro
lunabot_system/: CMakeLists.txt
lunabot_system/src/control/: localization_server.cpp  navigation_client.cpp  robot_controller.cpp
lunabot_teleop/: CMakeLists.txt  README.md  package.xml  setup.py
lunabot_teleop/src/: controller_teleop.cpp  keyboard_teleop.py  motor_controller.cpp
lunabot_util/: CMakeLists.txt  README.md  package.xml  setup.py
lunabot_util/src/: actuator_position.cpp  bandwidth_monitor.py  blade_joint_controller.cpp  encoder_reader.py  fisheye_camera.py  fisheye_rotation.py  hardware_monitor.cpp  image_compressor.py  imu_rotator.cpp  livox_to_pointcloud.py  power_monitor.py  topic_remapper.cpp
scripts/: README.md  canable_restart.sh  install.sh  install_dependencies.sh  install_launch_manager_service.py  setup_robot_services.sh  setup_udev.sh
third_party_packages/: README.md
third_party_packages/FAST_LIO_ROS2/src/: laserMapping.cpp
third_party_packages/Point-LIO/: CMakeLists.txt
third_party_packages/Point-LIO/src/: laserMapping.cpp  (+3 more)
third_party_packages/livox_laser_simulation_RO2/: CMakeLists.txt
third_party_packages/livox_laser_simulation_ros2/: CMakeLists.txt
third_party_packages/livox_ros_driver2/: CMakeLists.txt  CMakeLists.txt.backup
(+33 files in other folders)
