<?xml version="1.0"?>
<package format="3">
  <name>lunabot_bringup</name>
  <version>1.0.0</version>
  <description>This package contains launch files.</description>
  <maintainer email="grayson.n.arendt5@gmail.com">Grayson Arendt</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>navigation2</depend>
  <depend>robot_localization</depend>
  <depend>xacro</depend>
  <depend>rtabmap</depend>
  <depend>rtabmap_ros</depend>
  <depend>lunabot_simulation</depend>
  <depend>lunabot_config</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>