<?xml version="1.0"?>
<package format="3">
  <name>lunabot_logger</name>
  <version>1.0.0</version>
  <description>Logging utilities for Lunabot packages (C++ and Python).</description>
  <maintainer email="grayson.n.arendt5@gmail.com">Grayson Arendt</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
