<?xml version="1.0"?>
<package format="3">
  <name>lunabot_teleop</name>
  <version>1.0.0</version>
  <description>This package contains code to control the robot with either a keyboard or game controller.</description>
  <maintainer email="grayson.n.arendt5@gmail.com">Grayson Arendt</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
